# F1WinnerPrediction

./: .gitignore  PIPELINE_README.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml
data/checkpoints/: checkpoint.json
data/interim/: df_qualirace.csv  df_raceonly.csv  df_windows_qualirace.csv  df_windows_raceonly.csv  driver_qualionly_results.csv
models/: xgb_model_qualirace.json
notebooks/: create_sessions.ipynb  test.ipynb
src/f1winnerprediction/: __main__.py  config.py  fetch_race_sessions.py  fetching_gp_data.py  io_fastf1.py  metrics.py  output.csv  pipeline.py  preprocessing.py  split.py  test.ipynb  transformation.py  utils.py  visualization.py
